-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: hotspot
-
Environment:
Host: Intel MacPro5,1 3200 MHz, 8 cores, 8G, MacOSX / Mac OS X Unknown, x86_64
JDK: Java(TM) SE Runtime Environment 1.9.0 b0
-
b64
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082664 | emb-9 | Yumin Qi | P3 | Resolved | Fixed | team |
Some MacOS X tests failed due to timeouts because of difficulty creating core dump files. The tests intentionally crash the VM so the core dump files are not needed for analysis purposes. The generations of the core dump files can be controlled by the new flag and there would have a better chance of completing without timing out.
- backported by
-
JDK-8082664 Make CreateMinidumpOnCrash a new name and available on all platforms
-
- Resolved
-
- blocks
-
JDK-8046869 Several java/lang/instrument/PremainClass/* tests fail due to timeout
-
- Resolved
-
- duplicates
-
JDK-8074130 runtime/memory/ReserveMemory.java spawned thread times out
-
- Closed
-
-
JDK-8078557 runtime/ErrorHandling/SafeFetchInErrorHandlingTest.java timed out
-
- Closed
-
-
JDK-8075155 [TESTBUG] runtime/Unsafe/RangeCheck.java didn't get the expected assert
-
- Closed
-
- relates to
-
JDK-8080446 The change for 8074354 removed the server check when creating minidumps on Windows
-
- Resolved
-