8074354: Make CreateMinidumpOnCrash a new name and available on all platforms

Rename CreateMinidumpOnCrash which is used only for Windows as CreateCoredumpOnCrash and make it available for all platforms. Changed order for dumping core on Windows to be similar on other platforms. Also reviewed by thomas.stuefe@gmail.com

Co-authored-by: Thomas Stuefe <thomas.stuefe@gmail.com>
Reviewed-by: dcubed